syntax = "proto3";

package io.harness.perpetualtask.k8s.watch;

option java_multiple_files = true;

message K8sWatchTaskParams {
  string cloud_provider_id = 1;
  bytes k8s_cluster_config = 2;
  string cluster_id = 3;
  string cluster_name = 4;
}
